Term Project - Final - v3

--- a/VideoGameTrading/Views/Shop/Card.cshtml
+++ b/VideoGameTrading/Views/Shop/Card.cshtml
@@ -18,7 +18,7 @@
             @* PRICE *@
             <small><span class="fw-bold">PRICE:</span> $@Model.Price</small>
             @* AGE RATING *@
-            <small><span class="fw-bold">RATED:</span> @Model.AgeRange</small>
+            <small><span class="fw-bold">AGE RATING:</span> @Model.AgeRange</small>
             @* CONDITION *@
             <small><span class="fw-bold">CONDITION:</span> @Model.Condition</small>
             @* FROM *@
