--- a/VideoGameTrading/Views/Shop/Index.cshtml
+++ b/VideoGameTrading/Views/Shop/Index.cshtml
@@ -45,7 +45,7 @@
         </div>
         @* AGE RANGE *@
         <div class="d-flex flex-column">
-            <p class="bg-light-subtle fw-bold shadow-lg mb-0 p-2">AGE RANGE</p>
+            <p class="bg-light-subtle fw-bold shadow-lg mb-0 p-2">AGE RATING</p>
             <div class="p-2">
                 <div class="input-group">
                     <span class="input-group-text border-secondary-subtle">Rating</span>
@@ -60,6 +60,16 @@
                 <div class="input-group">
                     <span class="input-group-text border-secondary-subtle">Physical</span>
                     <input class="form-control border-secondary-subtle" name="condition" placeholder='e.g. "Excellent"' />
+                </div>
+            </div>
+        </div>
+        @* AUTHOR *@
+        <div class="d-flex flex-column">
+            <p class="bg-light-subtle fw-bold shadow-lg mb-0 p-2">OWNER</p>
+            <div class="p-2">
+                <div class="input-group">
+                    <span class="input-group-text border-secondary-subtle">Created by</span>
+                    <input class="form-control border-secondary-subtle" name="author" placeholder='e.g. "John Doe"' />
                 </div>
             </div>
         </div>
