Term Project - Final - v5

--- a/VideoGameTrading/Views/Shop/Index.cshtml
+++ b/VideoGameTrading/Views/Shop/Index.cshtml
@@ -79,7 +79,7 @@
         @* Search *@
         <div class="d-flex flex-column align-items-center container mb-5">
             <div class="d-flex flex-column gap-3 ms-auto">
-                <a class="btn btn-lg btn-secondary rounded-0 fw-bold" href="/shop">RESET FILTERS</a>
+                <input class="btn btn-lg btn-secondary rounded-0 fw-bold" type="reset" value="RESET FILTERS">
                 <a class="btn btn-lg btn-warning rounded-0 text-dark fw-bold" href="/shop/create">CREATE PRODUCT</a>
             </div>
             <div id="search" class="input-group mt-5">
